--- a/index.html
+++ b/index.html
@@ -5,4 +5,14 @@ title: Home Page
 <body>
     <h1>{{ "Hello World!" | downcase }}</h1>
     <h1>{{ site.title }}</h1>
+    <!-- Post Stream -->
+    <h1>Latest Posts</h1>
+    <ul>
+        {% for post in site.posts %}
+          <li>
+            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            {{ post.excerpt }}
+          </li>
+        {% endfor %}
+      </ul>
 </body>
